// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`transformer-variant-group > basic > "!hover:(m-2 p-2)" 1`] = `
{
  "annotations": [
    {
      "className": "!hover:m-2",
      "length": 3,
      "offset": 8,
    },
    {
      "className": "!hover:p-2",
      "length": 3,
      "offset": 12,
    },
  ],
  "transformed": "!hover:m-2 !hover:p-2",
}
`;

exports[`transformer-variant-group > basic > "<md:(grid grid-cols-[1fr,50%])" 1`] = `
{
  "annotations": [
    {
      "className": "<md:grid",
      "length": 4,
      "offset": 5,
    },
    {
      "className": "<md:grid-cols-[1fr,50%]",
      "length": 19,
      "offset": 10,
    },
  ],
  "transformed": "<md:grid <md:grid-cols-[1fr,50%]",
}
`;

exports[`transformer-variant-group > basic > "<sm:hover:(p-1 p-2)" 1`] = `
{
  "annotations": [
    {
      "className": "<sm:hover:p-1",
      "length": 3,
      "offset": 11,
    },
    {
      "className": "<sm:hover:p-2",
      "length": 3,
      "offset": 15,
    },
  ],
  "transformed": "<sm:hover:p-1 <sm:hover:p-2",
}
`;

exports[`transformer-variant-group > basic > "[&]:(w-4 h-4) [&]:(w-4 h-4)" 1`] = `
{
  "annotations": [
    {
      "className": "[&]:w-4",
      "length": 3,
      "offset": 5,
    },
    {
      "className": "[&]:h-4",
      "length": 3,
      "offset": 9,
    },
    {
      "className": "[&]:w-4",
      "length": 3,
      "offset": 19,
    },
    {
      "className": "[&]:h-4",
      "length": 3,
      "offset": 23,
    },
  ],
  "transformed": "[&]:w-4 [&]:h-4 [&]:w-4 [&]:h-4",
}
`;

exports[`transformer-variant-group > basic > "a1 a2:(b1 b2:(c1 c2-(d1 d2) c3) b3) a3" 1`] = `
{
  "annotations": [
    {
      "className": "a2:b1",
      "length": 2,
      "offset": 7,
    },
    {
      "className": "a2:b2:c1",
      "length": 2,
      "offset": 14,
    },
    {
      "className": "a2:b2:c2-d1",
      "length": 2,
      "offset": 21,
    },
    {
      "className": "a2:b2:c2-d2",
      "length": 2,
      "offset": 24,
    },
    {
      "className": "a2:b2:c3",
      "length": 2,
      "offset": 28,
    },
    {
      "className": "a2:b3",
      "length": 2,
      "offset": 32,
    },
  ],
  "transformed": "a1 a2:b1 a2:b2:c1 a2:b2:c2-d1 a2:b2:c2-d2 a2:b2:c3 a2:b3 a3",
}
`;

exports[`transformer-variant-group > basic > "at-lg:(p-1 p-2)" 1`] = `
{
  "annotations": [
    {
      "className": "at-lg:p-1",
      "length": 3,
      "offset": 7,
    },
    {
      "className": "at-lg:p-2",
      "length": 3,
      "offset": 11,
    },
  ],
  "transformed": "at-lg:p-1 at-lg:p-2",
}
`;

exports[`transformer-variant-group > basic > "bg-white font-light sm:hover:(bg-gray-100 font-medium)" 1`] = `
{
  "annotations": [
    {
      "className": "sm:hover:bg-gray-100",
      "length": 11,
      "offset": 30,
    },
    {
      "className": "sm:hover:font-medium",
      "length": 11,
      "offset": 42,
    },
  ],
  "transformed": "bg-white font-light sm:hover:bg-gray-100 sm:hover:font-medium",
}
`;

exports[`transformer-variant-group > basic > "dark:lg:(p-1 p-2)" 1`] = `
{
  "annotations": [
    {
      "className": "dark:lg:p-1",
      "length": 3,
      "offset": 9,
    },
    {
      "className": "dark:lg:p-2",
      "length": 3,
      "offset": 13,
    },
  ],
  "transformed": "dark:lg:p-1 dark:lg:p-2",
}
`;

exports[`transformer-variant-group > basic > "hover:(
!m-2 
p-2
)" 1`] = `
{
  "annotations": [
    {
      "className": "!hover:m-2",
      "length": 4,
      "offset": 8,
    },
    {
      "className": "hover:p-2",
      "length": 3,
      "offset": 14,
    },
  ],
  "transformed": "!hover:m-2 hover:p-2",
}
`;

exports[`transformer-variant-group > basic > "hover:(!m-2 p-2)" 1`] = `
{
  "annotations": [
    {
      "className": "!hover:m-2",
      "length": 4,
      "offset": 7,
    },
    {
      "className": "hover:p-2",
      "length": 3,
      "offset": 12,
    },
  ],
  "transformed": "!hover:m-2 hover:p-2",
}
`;

exports[`transformer-variant-group > basic > "lt-md:(grid grid-cols-[1fr,50%])" 1`] = `
{
  "annotations": [
    {
      "className": "lt-md:grid",
      "length": 4,
      "offset": 7,
    },
    {
      "className": "lt-md:grid-cols-[1fr,50%]",
      "length": 19,
      "offset": 12,
    },
  ],
  "transformed": "lt-md:grid lt-md:grid-cols-[1fr,50%]",
}
`;

exports[`transformer-variant-group > basic > "lt-sm:hover:(p-1 p-2)" 1`] = `
{
  "annotations": [
    {
      "className": "lt-sm:hover:p-1",
      "length": 3,
      "offset": 13,
    },
    {
      "className": "lt-sm:hover:p-2",
      "length": 3,
      "offset": 17,
    },
  ],
  "transformed": "lt-sm:hover:p-1 lt-sm:hover:p-2",
}
`;

exports[`transformer-variant-group > basic > "md:(w-1/2 h-[calc(100%-4rem)])" 1`] = `
{
  "annotations": [
    {
      "className": "md:w-1/2",
      "length": 5,
      "offset": 4,
    },
    {
      "className": "md:h-[calc(100%-4rem)]",
      "length": 19,
      "offset": 10,
    },
  ],
  "transformed": "md:w-1/2 md:h-[calc(100%-4rem)]",
}
`;

exports[`transformer-variant-group > basic > "md:(w-40vw pr-4.5rem)" 1`] = `
{
  "annotations": [
    {
      "className": "md:w-40vw",
      "length": 6,
      "offset": 4,
    },
    {
      "className": "md:pr-4.5rem",
      "length": 9,
      "offset": 11,
    },
  ],
  "transformed": "md:w-40vw md:pr-4.5rem",
}
`;

exports[`transformer-variant-group > basic > "sm:(p-1 p-2)" 1`] = `
{
  "annotations": [
    {
      "className": "sm:p-1",
      "length": 3,
      "offset": 4,
    },
    {
      "className": "sm:p-2",
      "length": 3,
      "offset": 8,
    },
  ],
  "transformed": "sm:p-1 sm:p-2",
}
`;
